fixed spacing and other minor issues, added close button

--- a/frontend/src/css/AddMenuItemModal.css
+++ b/frontend/src/css/AddMenuItemModal.css
@@ -13,7 +13,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 40px 40px 20px 20px;
+    padding: 10px 40px 20px 20px;
+}
+.headerContainer{
+    font-family: 'Roboto', sans-serif !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
 }
 .modalBackground{
     max-height: 700px;
@@ -23,13 +30,15 @@
     height: auto;
     background-color: white;
     overflow: scroll;
-    padding: 40px 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
 }
 .formItem{
     font-size: 16px !important;
+    margin: 0 0 20px 0 !important;
 }
 .formLongItem{
     font-size: 16px !important; 
+    margin: 0 0 10px 0 !important;
 }
 .formTextInput{
     height: 28px !important;
@@ -43,14 +52,13 @@
 .formLabelText {
     display: inline-block;
     font-weight: bold;
-    margin: 0;
-
+    margin: 0px !important;
 }
 .priceSizeContainer{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding-top: 20px;
+    padding-top: 5px;
 }
 .priceContainer{
     width: 35%;
@@ -95,7 +103,7 @@
     width: 100%;
     height: auto !important;
     font-size: 12px !important;
-    margin: -10px 0 10px 0;
+    margin: 10px 0 20px 0;
 }
 .menuAddButton {
     font-family: 'Roboto', sans-serif !important;
